fix(ktableview): row actions dropdown z-index [KHCP-17263]

--- a/src/styles/mixins/_tables.scss
+++ b/src/styles/mixins/_tables.scss
@@ -78,7 +78,7 @@
           height: 44px;
           position: sticky;
           top: 0;
-          z-index: 2;
+          z-index: 3;
 
           &.is-scrolled {
             background-color: var(--kui-color-background, $kui-color-background);
